--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="top">Tela de Login</div>
+        <form action="">
+            <div class="content">
+                <input type="text" name="username" id="username" placeholder="Username">
+                <input type="password" name="password" id="password" placeholder="Password">
+            </div>
+            <div class="buttons">
+
+                <input type="reset" class="button reset" value="Cancelar">
+                <input type="submit" class="button submit" value="Enviar">
+
+            </div> 
+        </form>
+    </div>
 </body>
 </html>
