--- a/Aula 2/index.html
+++ b/Aula 2/index.html
@@ -5,24 +5,75 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Segunda aula - BootStrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body class="bg-dark bg-gradient">
-    <div class="container bg-white">
+    <div class="container bg-white p-0">
         <header class="bg-info bg-gradient p-5 text-center">
             <h1>Página com BootStrap</h1>
         </header>
-        <nav>
-            Aqui vamos fazer os links
+        <nav class="bg-black bg-gradient text-warning text-center">
+            Gmail Drive Planilhas Agenda
         </nav>
-        <section>
-            <article>
-                Conteúdo principal da página
+        <section class="row">
+            <article class="col-sm-9 py-5 ps-5">
+                <h2>Conteúdo principal da página</h2>
+                <p>O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias desde o ano de 1500, quando uma misturou os caracteres de um texto para criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas também o salto para a tipografia electrónica, mantendo-se essencialmente inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente com os programas de publicação como o Aldus PageMaker que incluem versões do Lorem Ipsum.</p>
+
+                <p>É um facto estabelecido de que um leitor é distraído pelo conteúdo legível de uma página quando analisa a sua mancha gráfica. Logo, o uso de Lorem Ipsum leva a uma distribuição mais ou menos normal de letras, ao contrário do uso de "Conteúdo aqui, conteúdo aqui", tornando-o texto legível. Muitas ferramentas de publicação electrónica e editores de páginas web usam actualmente o Lorem Ipsum como o modelo de texto usado por omissão, e uma pesquisa por "lorem ipsum" irá encontrar muitos websites ainda na sua infância. Várias versões têm evoluído ao longo dos anos, por vezes por acidente, por vezes propositadamente (como no caso do humor).</p>
             </article>
-            <aside>
-                Banner de propagandas
+            <aside class="col-sm">
+                <img src="banner.jpg" alt="Banner">
             </aside>
         </section>
-        <footer>
+        <section id="produtos" class="row m-0 p-0">
+            <!--produto1-->
+            <div class="col-sm-3 bg-secondary bg-gradient text-center text-white">
+                <h3>PRODUTO</h3>
+                <p>Descrição do produto</p>
+                <h4>Valor</h4>
+            </div>
+            <!--produto2-->
+            <div class="col-sm-3 bg-dark bg-gradient text-center text-white">
+                <h3>PRODUTO</h3>
+                <p>Descrição do produto</p>
+                <h4>Valor</h4>
+            </div>
+            <!--produto3-->
+            <div class="col-sm-3 bg-secondary bg-gradient text-center text-white">
+                <h3>PRODUTO</h3>
+                <p>Descrição do produto</p>
+                <h4>Valor</h4>
+            </div>
+            <!--produto4-->
+            <div class="col-sm-3 bg-dark bg-gradient text-center text-white">
+                <h3>PRODUTO</h3>
+                <p>Descrição do produto</p>
+                <h4>Valor</h4>
+            </div>
+        </section>
+
+        <section class="p-2 bg-black">
+
+        </section>
+
+        <section class="row">
+            <div class="col-sm-6 p-5">
+                <h3>Entre em contato</h3>
+                <form action="">
+                    <input type="text" name="Nome" id="Nome" class="form-control my-2" placeholder="Digite seu nome">
+                    <input type="email" name="Email" id="Email" class="form-control my-2" placeholder="Digite seu email">
+                    <textarea name="Assunto" id="Assunto" placeholder="Nos conte um pouco sobre o que deseja!" class="form-control my-2"></textarea>
+                    <input type="submit" value="Enviar" class="form-control my-2 btn btn-primary">
+
+                </form>
+
+            </div>
+            <div class="col-sm-6">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3452.5012728949528!2d-51.22224772547005!3d-30.07982703291624!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95198280e407c2b3%3A0x6de74d911b011b86!2sUniRitter%20-%20Campus%20Zona%20Sul!5e0!3m2!1spt-BR!2sbr!4v1740785472425!5m2!1spt-BR!2sbr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
+        <footer class="bg-black bg-gradient p-5 text-center text-white">
             Copyright 2025 &copy; - Gabriel Matos.
         </footer>
 
