--- a/Aula 2/index.html
+++ b/Aula 2/index.html
@@ -12,8 +12,16 @@
         <header class="bg-info bg-gradient p-5 text-center">
             <h1>Página com BootStrap</h1>
         </header>
-        <nav class="bg-black bg-gradient text-warning text-center">
-            Gmail Drive Planilhas Agenda
+        <nav class="bg-black bg-gradient text-warning text-center" class="flex-container">
+            <div class="menu-lateral">
+                Menu
+                <ol class="itens-menu">
+                    <li><a class="gmail" href="https://gmail.com.br" target="blank">Gmail</a></li>
+                    <li>Drive</li>
+                    <li>Planilhas</li>
+                    <li>Agenda</li>
+                </ol>
+            </div>
         </nav>
         <section class="row">
             <article class="col-sm-9 py-5 ps-5">
