--- a/Aula 4/preco.html
+++ b/Aula 4/preco.html
@@ -25,28 +25,30 @@
               </div>
             </div>
         </nav>
-            <section class="conteudo">
-                <div class="produtos row">
-                    <div class="col-sm-2 bg-tertiary text-center p-5 impar">
-                        PRODUTOS
+            <section class="preco">
+                <h1>Preço</h1>
+                <div id="carouselExample" class="carousel slide">
+                  <div class="carousel-inner">
+                    <div class="carousel-item active">
+                      <img src="https://placehold.jp/150x150.png" class="d-block w-100" alt="...">
                     </div>
-                    <div class="col-sm-2 bg-tertiary text-center p-5">
-                        PRODUTOS
+                    <div class="carousel-item">
+                      <img src="https://placehold.jp/150x150.png" class="d-block w-100" alt="...">
                     </div>
-                    <div class="col-sm-2 bg-tertiary text-center p-5 impar">
-                        PRODUTOS
+                    <div class="carousel-item">
+                      <img src="https://placehold.jp/150x150.png" class="d-block w-100" alt="...">
                     </div>
-                    <div class="col-sm-2 bg-tertiary text-center p-5">
-                        PRODUTOS
-                    </div>
-                    <div class="col-sm-2 bg-tertiary text-center p-5 impar">
-                        PRODUTOS
-                    </div>
-                    <div class="col-sm-2 bg-tertiary text-center p-5">
-                        PRODUTOS
-                    </div>
+                  </div>
+                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                  </button>
+                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                  </button>
                 </div>
-                <footer class="fixed-bottom bg-dark text-white text-center p-5">
+                <footer class="bg-dark text-white text-center p-3">
                     MecanicApp - 2025
                 </footer>
             </section>
