--- a/Aula 7/FilmeFlix/index.html
+++ b/Aula 7/FilmeFlix/index.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FilmeFlix</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
 </head>
-<body>
-    <div id="main">
-        <form id="form">
-            <input type="text" id="search" placeholder="Buscar filme...">
-            <button type="submit">Pesquisar</button>
-        </form>
-        <div id="results"></div>
+<body class="bg-dark">
+    <header>
+        <div class="row">
+            <div class="col-sm-4">
+                <h1 class="p-3 text-danger">FilmeFlix</h1>
+            </div>
+            <div class="col-sm-8 pesquisa">
+                <div id="main">
+                    <form id="form">
+                        <input type="text" id="search" class="search" placeholder="Buscar filme...">
+                        <button type="submit" class="btn btn-lg text-danger pesquisar">Pesquisar</button>
+                    </form>   
+                </div>
+            </div>
+
+        </div>
+    </header>
+    <div class="container-fluid">
+        <div id="main">
+            <div id="results" class="results"></div>
+        </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
