--- a/Aula 13/index.html
+++ b/Aula 13/index.html
@@ -10,13 +10,12 @@
     <div class="jukebox">
         <header class="header text-center">JUKEBOX</header>
 
-        <div class="display">
-            Tocando a música: <br>
-            Exemplo de música
+        <div id="tocando" class="display">
+            
         </div>
 
         <div class="playlist">
-            <form class="formMusicas">
+            <form id="formMusicas">
                 <div class="row">
                     <div class="col-sm-8">
                         <input type="text" id="musica" class="form-control" placeholder="Nome da Música">
@@ -25,19 +24,19 @@
                         <input type="submit" value="Adicionar Música" class="btn btn-warning form-control">
                     </div>
                 </div>
+            </form>
                 <div class="row">
                     <div class="col-sm-8">
 
                     </div>
                     <div class="col-sm-4">
-                        <input type="submit" value="Tocar musica" class="btn btn-success mt-3 form-control">
+                        <input type="submit" value="Tocar musica" id="tocarMusica" class="btn btn-success mt-3 form-control">
                     </div>
                 </div>
-            </form>
             <div>
                 <h3 class="text-success mt-3">LISTA DE MÚSICAS:</h3>
                 <div class="lista text-warning ">
-                    
+                    <ol id="listaMusicas"></ol>
                 </div>
             </div>
         </div>
